--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Choobudo</string>
+    <string name="password">6!13569$E4B64!047E@4ACDF1^5A21857$$E526976F566E!841C@@4#362##8DB76#36C!996255E9</string>
+    <string name="login">Log in</string>
 </resources>
