--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,12 @@
 <resources>
     <string name="app_name">Choobudo</string>
-    <string name="password">6!13569$E4B64!047E@4ACDF1^5A21857$$E526976F566E!841C@@4#362##8DB76#36C!996255E9</string>
+    <string name="secret_number">6!13569$E4B64!047E@4ACDF1^5A21857$$E526976F566E!841C@@4#362##8DB76#36C!996255E9</string>
     <string name="login">Log in</string>
+    <string name="welcome">welcome!</string>
+    <string name="connect">Connect</string>
+    <string name="start">lets start!</string>
+    <string name="user">user</string>
+    <string name="password">password</string>
+    <string name="forgot_user">forgot user?</string>
+    <string name="continue_by">continue by</string>
 </resources>
