--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,14 @@
     <string name="app_name">Choobudo</string>
     <string name="secret_number">6!13569$E4B64!047E@4ACDF1^5A21857$$E526976F566E!841C@@4#362##8DB76#36C!996255E9</string>
     <string name="login">Log in</string>
-    <string name="welcome">welcome!</string>
-    <string name="connect">Connect</string>
-    <string name="start">lets start!</string>
-    <string name="user">user</string>
-    <string name="password">password</string>
-    <string name="forgot_user">forgot user?</string>
-    <string name="continue_by">continue by</string>
+    <string name="welcome">ברוכים הבאים!</string>
+    <string name="connect">התחברות</string>
+    <string name="start">בואו נתחיל!</string>
+    <string name="user">משתמש</string>
+    <string name="password">סיסמה</string>
+    <string name="forgot_user">שכחת סיסמה?</string>
+    <string name="continue_by">המשך באמצעות</string>
+    <string name="select_registration_method">בחר שיטת רישום:</string>
+    <string name="contributing_user">משתמש תורם</string>
+    <string name="association">עמותה</string>
 </resources>
