--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -25,4 +25,9 @@
     <string name="city">city</string>
     <string name="country">Country</string>
     <string name="dateBirth">Date of birth</string>
+    <string name="description">"מהרגע שתלחצו \"הרשמה\" - תוכלו להמשיך ולרכוש באתרי הקניות שבהסדר* כל רכישה תזכה את העמותה שלכם באחוזים מהעלות הקניה. בכל רגע נתון תוכלו לחזור לאזור האישי. "</string>
+    <string name="username">שם משתמש</string>
+    <string name="i_red">קראתי והבנתי את</string>
+    <string name="term_of_use">תנאי שימוש והתקנה</string>
+    <string name="registration">הרשמה</string>
 </resources>
