--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,20 @@
     <string name="no">לא</string>
     <string name="association_name">שם ההתארגנות</string>
     <string name="private_name_contact">שם פרטי איש קשר</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="organization_address">כתובת ההתארגנות</string>
+    <string name="postal">מיקוד</string>
+    <string name="number">מספר</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="account_name">שם החשבון</string>
+    <string name="account_num">מספר חשבון</string>
+    <string name="branch_name">שם הסניף</string>
+    <string name="branch_number">מספר סניף</string>
+    <string name="bank_num">מספר בנק</string>
+    <string name="passOrder">יש להזין לפחות 8 תווים</string>
+    <string name="num_participants">מספר משתמשים</string>
+    <string name="personal_link">לינק עמותה אישי</string>
+    <string name="descriptionAssociate">מהרגע שתלחצו ״הרשמה״ - תוכלו להמשיך ולרכוש באתרי הקניות שבהסדר*. כל רכישה תזכה את העמותה שלכם באחוזים מהעלות הקניה. בכל רגע נתון תוכלו לחזור לאזור האישי.</string>
+    <string name="i_confirm">אני מאשר קבלת עדכונים במייל, SMS, ווצאפ (ניתן לשנות העדפות בעמוד הפרופיל האישי)</string>
 
 </resources>
