--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -51,4 +51,5 @@
     <string name="descriptionAssociate">מהרגע שתלחצו ״הרשמה״ - תוכלו להמשיך ולרכוש באתרי הקניות שבהסדר*. כל רכישה תזכה את העמותה שלכם באחוזים מהעלות הקניה. בכל רגע נתון תוכלו לחזור לאזור האישי.</string>
     <string name="i_confirm">אני מאשר קבלת עדכונים במייל, SMS, ווצאפ (ניתן לשנות העדפות בעמוד הפרופיל האישי)</string>
     <string name="success_msg">הפעולה הצליחה</string>
+    <string name="failed_msg">the action has been failed</string>
 </resources>
