--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,4 +58,12 @@
     <string name="success_msg">הפעולה הצליחה</string>
     <string name="failed_msg">הפעולה נכשלה</string>
 
+    <string-array name="type_organization">
+        <item>עמותה</item>
+        <item>חל"צ</item>
+        <item>מטרה טובה ללא מסגרת רשמית</item>
+        <item>אחר</item>
+    </string-array>
+
+
 </resources>
