--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -52,6 +52,8 @@
     <string name="i_confirm">אני מאשר קבלת עדכונים במייל, SMS, ווצאפ (ניתן לשנות העדפות בעמוד הפרופיל האישי)</string>
     <string name="success_msg">הפעולה הצליחה</string>
     <string name="failed_msg">the action has been failed</string>
+    <string name="who_we_are">who we are?</string>
+    <string name="faq">FAQ</string>
     <string-array name="type_organization">
         <item>עמותה</item>
         <item>חל"צ</item>
