--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -52,6 +52,8 @@
     <string name="i_confirm">אני מאשר קבלת עדכונים במייל, SMS, ווצאפ (ניתן לשנות העדפות בעמוד הפרופיל האישי)</string>
     <string name="success_msg">הפעולה הצליחה</string>
     <string name="failed_msg">הפעולה נכשלה</string>
+    <string name="who_we_are">מי אנחנו?</string>
+    <string name="faq">FAQ</string>
     <string-array name="type_organization">
         <item>עמותה</item>
         <item>חל"צ</item>
