--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -54,6 +54,10 @@
     <string name="failed_msg">הפעולה נכשלה</string>
     <string name="who_we_are">מי אנחנו?</string>
     <string name="faq">FAQ</string>
+    <string name="profile">פרופיל</string>
+    <string name="saved">שמורים</string>
+    <string name="stores">חנויות</string>
+    <string name="associations">עמותות</string>
     <string-array name="type_organization">
         <item>עמותה</item>
         <item>חל"צ</item>
