1) validation of first contributer  registration 2) implements get website (with cookie and token) 3) design add logo in association registration

--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -58,6 +58,8 @@
     <string name="saved">saved</string>
     <string name="stores">stores</string>
     <string name="associations">associations</string>
+    <string name="add_logo">Add an association logo</string>
+    <string name="choose_association">choose association</string>
     <string-array name="type_organization">
         <item>עמותה</item>
         <item>חל"צ</item>
