--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,6 +71,10 @@
         <item>מטרה טובה ללא מסגרת רשמית</item>
         <item>אחר</item>
     </string-array>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
+    <string name="add_logo">הוסף לוגו עמותה</string>
+    <string name="choose_association">בחר עמותה</string>
 
 
 </resources>
