--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,13 @@
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="add_logo">הוסף לוגו עמותה</string>
     <string name="choose_association">בחר עמותה</string>
+    <color name="flavour_background_dark">#757575</color>
+    <color name="flavour_background_very_dark">#75787C</color>
 
+    <array name="banners_array">
+        <item>@drawable/banner1</item>
+        <item>@drawable/banner2</item>
+        <item>@drawable/banner3</item>
+    </array>
 
 </resources>
