--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,6 +75,8 @@
     <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="add_logo">הוסף לוגו עמותה</string>
     <string name="choose_association">בחר עמותה</string>
+    <string name="special_for_you">במיוחד בשבילך</string>
+    <string name="search_store">חפש חנות …</string>
     <color name="flavour_background_dark">#757575</color>
     <color name="flavour_background_very_dark">#75787C</color>
 
