--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -77,6 +77,7 @@
     <string name="choose_association">בחר עמותה</string>
     <string name="special_for_you">במיוחד בשבילך</string>
     <string name="search_store">חפש חנות …</string>
+    <string name="email_pass_error">אימייל או סיסמה שגויים</string>
     <color name="flavour_background_dark">#757575</color>
     <color name="flavour_background_very_dark">#75787C</color>
 
