--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -63,7 +63,9 @@
     <string name="special_for_you">special for you</string>
     <string name="search_store">search store …</string>
     <string name="email_pass_error">invalid email or password</string>
+    <string name="email_already_exist">email already exist</string>
     <string-array name="type_organization">
+        <item>בחר</item>
         <item>עמותה</item>
         <item>חל"צ</item>
         <item>מטרה טובה ללא מסגרת רשמית</item>
