--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,6 +66,7 @@
     <string name="content" translatable="false">content</string>
 
     <string-array name="type_organization">
+        <item>בחר</item>
         <item>עמותה</item>
         <item>חל"צ</item>
         <item>מטרה טובה ללא מסגרת רשמית</item>
@@ -78,6 +79,7 @@
     <string name="special_for_you">במיוחד בשבילך</string>
     <string name="search_store">חפש חנות …</string>
     <string name="email_pass_error">אימייל או סיסמה שגויים</string>
+    <string name="email_already_exist">האימייל קיים במערכת</string>
     <color name="flavour_background_dark">#757575</color>
     <color name="flavour_background_very_dark">#75787C</color>
 
