Implements my favourite

--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -64,6 +64,7 @@
     <string name="search_store">חפש חנות …</string>
     <string name="email_pass_error">אימייל או סיסמה שגויים</string>
     <string name="email_already_exist">האימייל קיים במערכת</string>
+    <string name="your_opprtunities" translatable="false">ההזדמנויות שלך</string>
     <string-array name="type_organization">
         <item>בחר</item>
         <item>עמותה</item>
