--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -64,6 +64,7 @@
     <string name="search_store">search store …</string>
     <string name="email_pass_error">invalid email or password</string>
     <string name="email_already_exist">email already exist</string>
+    <string name="your_opprtunities" translatable="false">ההזדמנויות שלך</string>
     <string-array name="type_organization">
         <item>בחר</item>
         <item>עמותה</item>
