--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -65,6 +65,7 @@
     <string name="email_pass_error">invalid email or password</string>
     <string name="email_already_exist">email already exist</string>
     <string name="your_opprtunities" translatable="false">ההזדמנויות שלך</string>
+    <string name="no_website">there is no link of website</string>
     <string-array name="type_organization">
         <item>בחר</item>
         <item>עמותה</item>
