--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -83,6 +83,16 @@
     <string name="email_pass_error">אימייל או סיסמה שגויים</string>
     <string name="email_already_exist">האימייל קיים במערכת</string>
     <string name="no_website">חסר קישור לאתר אינטרנט</string>
+    <string name="user_details">פרטי משתמש</string>
+    <string name="gather_donation_details">רכזו את כל התרומות לזכותנו:</string>
+    <string name="extent_donation">היקף התרומות שלי:</string>
+    <string name="annual">שנתי</string>
+    <string name="tillthisday">עד היום</string>
+    <string name="quarterly">רבעוני</string>
+    <string name="hundred">100</string>
+    <string name="type_money">ש\"ח</string>
+    <string name="private_details">פרטים אישיים</string>
+    <string name="donation_details">פרטי תרומות</string>
     <color name="flavour_background_dark">#757575</color>
     <color name="flavour_background_very_dark">#75787C</color>
 
