--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -83,4 +83,10 @@
         <item>מטרה טובה ללא מסגרת רשמית</item>
         <item>אחר</item>
     </string-array>
+    <string-array name="collect_all_donations">
+        <item>בחר</item>
+        <item>בזיכוי ישיר לעמותה</item>
+        <item>חשבון שלנו ב"עיגול לטובה"</item>
+        <item>JGIVEחשבון שלנו ב</item>
+    </string-array>
 </resources>
