--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Choobudo</string>
-    <string name="secret_number">6!13569$E4B64!047E@4ACDF1^5A21857$$E526976F566E!841C@@4#362##8DB76#36C!996255E9</string>
+    <string name="secret_number">6!13569$E4B64!047E@4ACDF!^5A21857$$E526976F566E!841C@@4#362##8DB76#36C!996255E9</string>
     <string name="login">Log in</string>
     <string name="welcome">welcome!</string>
     <string name="connect">Connect</string>
