--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -64,7 +64,7 @@
     <string name="search_store">חפש חנות …</string>
     <string name="email_pass_error">אימייל או סיסמה שגויים</string>
     <string name="email_already_exist">האימייל קיים במערכת</string>
-    <string name="your_opprtunities" translatable="false">ההזדמנויות שלך</string>
+    <string name="your_opprtunities" >ההזדמנויות שלך</string>
     <string name="no_website">חסר קישור לאתר אינטרנט</string>
     <string name="user_details">פרטי משתמש</string>
     <string name="gather_donation_details">רכזו את כל התרומות לזכותנו:</string>
