--- a/app/src/main/res/values-en-rUS/strings.xml
+++ b/app/src/main/res/values-en-rUS/strings.xml
@@ -78,6 +78,10 @@
     <string name="donation_details">donation details</string>
     <string name="sum_users">amount of users:</string>
     <string name="users">users</string>
+    <string name="i_remembered">I remembered</string>
+    <string name="reset_password">reset Password</string>
+    <string name="error">error</string>
+    <string name="response_reset_password">הודעה עם קישור זמני לאיפוס הסיסמה נשלחה לכתובת האימייל שהזנת (אם היא קיימת באתר). אם לא קיבלת את ההודעה - בדוק בספאם, או וודא שכתובת האימייל אכן רשומה באתר.</string>
     <string-array name="type_organization">
         <item>בחר</item>
         <item>עמותה</item>
